Clean up README: remove duplicate sections and consolidate documentation